@@ -21,7 +21,7 @@
         % prefix specified for all subscriptions
         "/cloudi/api/",
         % module name of a module in a reachable path
-        cloudi_service_api,
+        cloudi_service_api_requests,
         % module arguments are supplied as a list for the
         % cloudi_service_init/2 function
         [],
@@ -226,6 +226,13 @@
     {internal,
         "/tests/http/",
         cloudi_service_http_cowboy,
+        [{port, 6464}, {output, external}, {use_websockets, true}],
+        immediate_closest, 
+        5000, 5000, 5000, undefined, undefined, 1, 5, 300,
+        [{duo_mode, true}]},
+    {internal,
+        "/tests/http/",
+        cloudi_service_http_cowboy,
         [{port, 6466}, {output, external}],
         immediate_closest,
         5000, 5000, 5000, [api], undefined, 1, 5, 300,
@@ -235,13 +242,6 @@
         cloudi_service_http_cowboy,
         [{port, 6467}, {output, internal}],
         immediate_closest, % quickstart testing, to avoid false negatives
-        5000, 5000, 5000, undefined, undefined, 1, 5, 300,
-        [{duo_mode, true}]},
-    {internal,
-        "/tests/http/",
-        cloudi_service_http_cowboy,
-        [{port, 6468}, {output, external}, {use_websockets, true}],
-        immediate_closest, 
         5000, 5000, 5000, undefined, undefined, 1, 5, 300,
         [{duo_mode, true}]},
     {external,
