@@ -7,7 +7,7 @@
    {modules, [
         cloudi_http_cowboy_handler,
         cloudi_json_rpc,
-        cloudi_service_api,
+        cloudi_service_api_requests,
         cloudi_service_filesystem,
         cloudi_service_http_cowboy,
         cloudi_service_map_reduce,
